--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@react-three/drei": "^9.111.3",
+    "@react-three/fiber": "^8.17.5",
     "file-loader": "^6.2.0",
     "gsap": "^3.12.5",
-    "next": "14.2.5",
+    "next": "^14.2.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "three": "^0.167.1"
   },
   "devDependencies": {
     "postcss": "^8",
